# imagekit

./: CMakeLists.txt  README.md  imagekit.vix  vix.json
examples/: basic_compress.cpp  basic_resize.cpp  resize_and_compress.cpp
tests/: test_basic.cpp
